# ovl_cli

./: .gitignore  README.md  build.py  init.py  main.py  pyproject.toml
test/test_proj/: README.md  ovl_config.toml  package-lock.json  package.json  svelte.config.js
