[project]
name = "ovllib_dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ['InquirerPy', 'pydantic', 'tomlkit']

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
ovllib_dev = "main:main"

[tool.setuptools]
py-modules = ["main", "init", "build"]

[dependency-groups]
dev = [
    "build>=1.4.4",
    "twine>=6.2.0",
]
